<?xml version="1.0"?>
<package format="2">
  <name>cob_vision_utils</name>
  <version>0.6.6</version>
  
  <description>
     Contains utilities used within the object detection tool chain.
  </description>
  
  <license>LGPL</license>
  
  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
  <author>Jan Fischer</author>
  
  <url>http://wiki.ros.org/cob_vision_utils</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>libopencv-dev</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>tinyxml</depend>

  <export>
        <!--cpp cflags="-I${prefix}/common/include -I${prefix}/ros/include" lflags="-Wl,-rpath,${prefix}/common/lib -L${prefix}/common/lib -lcob_vision_utils"/-->
  </export>
	
</package>

