<?xml version="1.0"?>
<package format="2">
  <name>cob_vision_utils</name>
  <version>0.6.18</version>
  
  <description>
     Contains utilities used within the object detection tool chain.
  </description>
  
  <license>Apache 2.0</license>
  
  <maintainer email="rmb@ipa.fhg.de">Richard Bormann</maintainer>
  <author>Jan Fischer</author>
  
  <url>http://wiki.ros.org/cob_vision_utils</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>roscpp</depend>
  <depend>visualization_msgs</depend>

</package>

