<?xml version="1.0"?>
<package format="2">
  <name>ipa_3d_fov_visualization</name>
  <version>0.0.0</version>
  <description>The ipa_3d_fov_visualization package</description>

  <maintainer email="florenz.graf@ipa.fraunhofer.de">Florenz Graf</maintainer>
  <author>Florenz Graf</author>

  <license>Fraunhofer IPA</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>cv_bridge</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
 
</package>
