<?xml version="1.0"?>
<package format="2">
  <name>ipa_3d_fov_visualization</name>
  <version>0.6.18</version>
  <description>The ipa_3d_fov_visualization package allows to visualize the field-of-view of a camera.</description>

  <maintainer email="florenz.graf@ipa.fraunhofer.de">Florenz Graf</maintainer>
  <author>Florenz Graf</author>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
 
</package>
